<resources>
    <string name="app_name">SAVER</string>
    <string name="kondisi_air_laut">
        Kondisi air laut tidak seperti biasanya</string>
    <string name="desc_kondisi_air_laut">
        Kondisi air di pantai sebelum terjadi tsunami akan surut secara tiba-tiba. \n \nBiasanya orang yeng letak daerahnya berada di sekitar pantai, memang di lebih di waspadai dari pada yang ada di daratan. Soalnya tsunami lebih mungkin bisa terjadi di daerah yang sekitarnya lautan. sebelum terjadi tsunami, keadaan air akan berbeda. Biasanya lebih surut secara tiba-tiba.</string>
    <string name="suaru_gemuruh">
        Terdengar suara gemuruh</string>
    <string name="desc_suaru_gemuruh">
        Suara gemuruh disertai ombak besar adalah suatu tanda bahwa akan datangnya tsunami. \n \nBukan hanya soal keadaan air lautnya yang berubah, ada pula ditandai dengan bentuk lain. Salah satunya adalah terdengar suara gemuruh yang besar dari kejauhan laut. Suara ini umumnya terdengar cukup besar dan keras. Hal ini disebabkan karena air yang ada menghantam lautan. Jika anda mendengar ini maka ada baiknya anda khawatir akan timbul tsunami. Kemungkinan suara ini muncul karena lempengan yang patah tadi menabrak air lautan. Sehingga menghasilkan suara yang keras.</string>
    <string name="tingkah_hewan">
        Tingkah hewan yang aneh</string>
    <string name="desc_tingkah_hewan">
        Sebelum terjadi gejala tsunami, ada beberapa hal yang aneh. Misalnya keberadaan burung yang tiba-tiba berpindah pindah dari keadaan pulau kecil. Biasanya mereka akan pergi menuju ke tengah lautan.</string>
    <string name="gempa_pengiring">
        Munculnya gempa pengiring</string>
    <string name="desc_gempa_pengiring">
        Gempa bersusul umumnya akan terjadi sebelum Tsunami datang. \n \nTsunami gak bisa tiba-tiba datang begitu saja ke daratan. Pasti sudah ada gempa yang mengawali terlebih dahulu. Salah satunya adalah gempa tektonik dan gempa vulkanik. Maka jika di daerah anda tiba-tiba ada gempa, anda perlu sedikit waspada. Gempa yang baru saja terjadi adalah gempa yang memiliki kekuatan tinggi atau tidak. Jika masih memasuki kekuatan rendah, maka anda bisa tersenyum lega. Tapi jika sudah masuk dalam kategori tinggi, maka ada resiko adanya gempa susulan bahkan sampai mencapai tsunami.</string>
    <string name="gelombang_laut">
        Gelombang laut tidak seperti biasa</string>
    <string name="desc_gelombang_laut">
        Gelombang aneh di laut akan terjadi sebelum datangnya Tsunami. \n \nGelombang yang ada merupakan salah satu tanda-tanda adanya tsunami akan datang. Apalagi gelombang yang muncul merupakan gelombang yang dinilai aneh dan gak seperti biasanya. Bisa saja gelombang yang memicu terjadinya tsunami merupakan bagian dari renteten gelombang yang ada. Atau bisa juga gelombang yang muncul di mulai dari gelombang yang kecil, kemudian gelombang yang besar. Baru setelah itu muncul tsunami yang sisanya akan mengakibatkan erosi tanah.</string>
    <string name="keadaan_awan">
        Keadaan awan di langit menjadi gelap</string>
    <string name="desc_keadaan_awan">
        Keadaan awan di langit sebelum tsunami akan berbentuk lebih gelap seperti mendung. \n \nTanda tanda alam lainnya sebelum terjadi tsunami akan berubah. Salah satunya adalah keadaan awan yang berbentuk lebih gelap dan mendung. Bahkan gak jarang dijumpai tornado atau angin serupa yang lainnya. Hal ini semua bisa terjadi karena adanya gelombang elektromagnetis dari dasar lapisan atmosfer bumi. Ini menyebabkan daya listrik di awan tertelan oleh gelombang-gelombang lainnya.</string>
    <string name="gempa_bumi_laut">Gempa bumi di bawah laut</string>
    <string name="desc_gempa_bumi_laut">Penyebab tsunami paling umum adalah gempa bumi di bawah laut. Gempa di bawah laut dapat mengakibatkan dasar laut naik atau turun, sehingga keseimbangan air di atas terganggu. Gempa bawah laut bisa menyebabkan tsunami hanya jika pusat gempa kurang dari 30km di bawah permukaan laut, gempa minimal berkekuatan 6,5 skala ritcher, dan pola gempa adalah pola sesar naik atau turun.</string>
    <string name="gunung_berapi">Gunung berapi</string>
    <string name="desc_gunung_berapi">Letusan gunung berapi baik di atas atau di bawah laut dapat menyebabkan tsunami. Tetapi, gunung berapi menyebabkan tsunami hanya jika kekuatan getarannya cukup besar. Efek getaran tersebut setara dengan gempa tektonik di bawah laut.</string>
    <string name="longsor_laut">Longsor di bawah laut</string>
    <string name="desc_longsor_laut">Dasar laut memiliki stuktur yang mirip daratan, yaitu ada bukit, lembah, dan cekungan yang bisa longsor sewaktu-waktu. Apabila ada gempa atau letusan gunung berapi yang menyebabkan getaran cukup besar, maka longsor bisa terjadi di bawah laut.</string>
    <string name="hantaman_meteor">Hantaman meteor</string>
    <string name="desc_hantaman_meteor">Tsunami juga bisa diakibatkan jika meteor jatuh ke laut. Saat meteor menghantam perairan, maka air tumpah ke daratan. Efeknya seperti saat bola atau benda berat menghantam air yang berada di sebuah kolam, atau bak air. Tetapi hingga saat ini belum ada catatan mengenai adanya kejadian ini di bumi.</string>
    <string name="manusia">Manusia</string>
    <string name="desc_manusia">Manusia jika menyebabkan tsunami ketika merusak ekosistem lingkungan. Misalnya, jika manusia menguji nuklir dan mengenai lautan, maka bukan tidak mungkin tsunami akan terjadi.</string>
    <string name="retakan_lereng">Retakan pada lereng</string>
    <string name="desc_retakan_lereng">Setelah hujan akan tampak retakan pada lereng. Kerikil akan berjatuhan. Tebing terlihat rapuh dan kurang kokoh.</string>
    <string name="mata_air_baru">Mata air baru</string>
    <string name="desc_mata_air_baru">Munculnya mata air baru secara tiba-tiba.</string>
    <string name="genangan_air">Genangan air</string>
    <string name="desc_genangan_air">Genangan air saat musim hujan akan lenyap saat terjadi longsor. </string>
    <string name="tanaman_miring">Tanaman miring</string>
    <string name="desc_tanaman_miring">Tanaman dan pepohonan sekitar tampak berdiri dengan posisi yang miring.</string>
    <string name="tiang_tidak_tegak">Tiang tidak tegak</string>
    <string name="desc_tiang_tidak_tegak">Tiang pintu dan jendela tidak tegak.</string>
    <string name="gemuruh">Gemuruh</string>
    <string name="desc_gemuruh">Adanya gemuruh yang kuat sebelum terjadinya longsor.</string>
    <string name="tinggi_curah_hujan">Tingginya curah hujan</string>
    <string name="desc_tinggi_curah_hujan">
        Curah hujan yang tinggi merupakan salah satu penyebab terjadinya bencana longsor. Ketika musim kemarau panjang, tanah akan kering dan membentuk pori-pori tanah atau rongga tanah, kemudian selanjutnya terjadi keretakan pada tanah tersebut. \n \nNah, saat musim hujan datang, otomatis air hujan ini akan masuk ke dalam rongga tanah atau pori-pori tanah yang terbuka tadi. Membuat air hujan akhirnya memenuhi rongga, yang menyebabkan terjadinya pergeseran tanah. Akhirnya mengakibatkan longsor dan erosi tanah.</string>
    <string name="erosi_tanah">Erosi tanah</string>
    <string name="desc_erosi_tanah">
        Erosi tanah merupakan salah satu penyebab tanah longsor yang paling sering terjadi. Erosi ini bisa terjadi ketika ada aliran air yang deras menyerang tanah, sehingga tanah bertambah curam. Aliran air ini bisa berupa gelombang air laut, air yang berasal dari hujan atau badai, air bah, air sungai, dan lain sebagainya.</string>
    <string name="lereng_tebing_terjal">Lereng tebing yang terjal</string>
    <string name="desc_lereng_tebing_terjal">
        Proses pembentukan lereng atau tebing terjal adalah lewatnya angin dan air di sekitar lereng yang berdampak pada pengikisan lereng tersebut. Waspada jika di sekitar tempat tinggal kamu terdapat tebing atau lereng terjal, karena rawan tanah longsor.</string>
    <string name="hutan_gundul">Hutan gundul</string>
    <string name="desc_hutan_gundul">
        Kalau di kawasan kamu tinggal terdapat penebangan hutan secara liar, maka hal ini akan memberikan dampak akibat hutan menjadi gundul, sehingga berdampak pada terjadinya bencana longsor. Pentingnya pohon di daerah perbukitan khususnya adalah untuk menyimpan air dan memperkuat struktur tanah. Ya, air yang berlimpah akan disimpan terlebih dahulu di akar pohon, sehingga tanah akan tetap kokoh dan tidak longsor.</string>
    <string name="peningkatan_suhu">Terjadi peningkatan suhu yang drastis</string>
    <string name="desc_peningkatan_suhu">Tanda pertama yang terjadi ketika akan terjadi angin topan adalah meningkatnya suhu di sekitar kita dengan sangat drastis. Hal ini bisa kita rasakan karena peningkatan suhu akan membuat badan menjadi panas dan juga terasa gerah. Ketika peningkatan suhu ini terjadi secara tiba- tiba, berarti akan ada sesuatu yang tidak beres terjadi. Maka dari itulah peningkatan suhu drastis dan terjadi dengan tiba- tiba patut untuk kita waspadai.</string>
    <string name="burung_dan_binatang">Burung bergerak menjauhi laut</string>
    <string name="desc_burung_dan_binatang">Tanda kedua adalah adanya perilaku dari binatang- binatang tertentu. Sudah menjadi hal yang wajar apabila menjelang terjadinya bencana alam, kita mendapati perilaku yang ganjil dari beberapa binatang. Hal ini karena binatang jauh lebih peka daripada manusia mengenai panca indera mereka. Adalah hal yang wajar apabila binatang mengetahui lebih dulu tentang akan terjadinya peristiwa alam daripada manusia. maka dari itulah manusia perlu juga untuk mengamati perilaku binatang. Salah satu tanda yang terjadi menjelang datangnya angin topan adalah perilaku beberapa bianatang yang terlihat menjauhi lautan secara berbondong- bondong. Binatang ini misalnya burung, dan lain sebagainya. Ketika melihat perilaku yang tidak wajar seperti ini, sebaiknya kita mengikuti jejak binatang tersebut dengan mengikutinya menjauhi area lautan.</string>
    <string name="angin_cepat">Angin dengan kecepatan yang cepat</string>
    <string name="tanda_banjir">Tanda-tanda banjir</string>
    <string name="desc_tanda_banjir">
        Air sungai tiba-tiba menjadi keruh meski saat itu tidak terjadi hujan. Hujan pemicu terjadi di hulu sungai pada jarak beberapa kilometer dari lokasi terdampak. \n \nNaiknya permukaan air sungai sekitar 10 sampai 20 sentimeter. Gejala ketiga, cuaca di pegunungan atau perbukitan hulu sungai terlihat mendung.</string>
    <string name="hujan_besar">Hujan besar</string>
    <string name="desc_hujan_besar">Setiap kali terjadi hujan yang lebat dan melebihi kapasitas sistem drainase, banjir akan terjadi. Terkadang hujan lebat dalam waktu relatif singkat dapat menyebabkan banjir. Di lain waktu, hujan gerimis selama berhari-hari atau berminggu-minggu dapat mengakibatkan banjir.</string>
    <string name="sungai_meluap">Sungai meluap</string>
    <string name="desc_sungai_meluap">Sungai yang meluap dapat menyebabkan banjir. Meluapnya sungai dapat terjadi ketika air lebih banyak di bagian hulu dari biasanya. Saat air itu mengalir ke hilir menuju dataran rendah yang berdekatan akan ada semburan dan air masuk ke daratan.</string>
    <string name="badai">Badai</string>
    <string name="desc_badai">Badai di pantai Air laut dapat terbawa angin kencang dan angin topan ke daratan pantai yang kering lalu menyebabkan banjir. Kondisi dapat lebih buruk jika angin tersebut juga membawa hujan sendiri. Terkadang air dari laut akibat tsunami dapat mengalir ke daratan dan menyebabkan kerusakan.</string>
    <string name="bendungan_rusak">Bendungan rusak</string>
</resources>