<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/iv_banjir"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/img_banjir"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_banjir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BANJIR"
            android:gravity="center"
            android:textSize="24sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/tv_tanda_banjir1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="Tanda - tanda Banjir"/>
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_tanda_banjir1"
                android:layout_marginTop="5dp"
                android:background="#858585"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <RelativeLayout
                android:id="@+id/kondisi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_tanda_banjir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/tanda_banjir"/>
                <ImageButton
                    android:id="@+id/btn_dropdown_desc_tanda_banjir"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:foreground="@drawable/background_back_state_pressed"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
                <TextView
                    android:id="@+id/desc_tanda_banjir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_tanda_banjir"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/desc_tanda_banjir"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/tv_penyebab_tsunami"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="Penyebab Banjir"/>
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_penyebab_tsunami"
                android:layout_marginTop="5dp"
                android:background="#858585"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <RelativeLayout
                android:id="@+id/penyebab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_hujan_besar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/hujan_besar"/>
                <ImageButton
                    android:id="@+id/btn_dropdown_desc_hujan_besar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:foreground="@drawable/background_back_state_pressed"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
                <TextView
                    android:id="@+id/desc_hujan_besar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_hujan_besar"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/desc_hujan_besar"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:id="@+id/penyebab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_sungai_meluap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/sungai_meluap"/>
                <ImageButton
                    android:id="@+id/btn_dropdown_desc_sungai_meluap"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:foreground="@drawable/background_back_state_pressed"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
                <TextView
                    android:id="@+id/desc_sungai_meluap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_sungai_meluap"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/desc_sungai_meluap"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:id="@+id/penyebab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_badai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/badai"/>
                <ImageButton
                    android:id="@+id/btn_dropdown_desc_badai"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:foreground="@drawable/background_back_state_pressed"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
                <TextView
                    android:id="@+id/desc_lereng_badai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_badai"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/desc_badai"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:id="@+id/penyebab4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_bendungan_rusak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/bendungan_rusak"/>
                <ImageButton
                    android:id="@+id/btn_dropdown_desc_bendungan_rusak"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:foreground="@drawable/background_back_state_pressed"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
                <TextView
                    android:id="@+id/desc_bendungan_rusak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_bendungan_rusak"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:text="@string/desc_hutan_gundul"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/tv_skala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="Skala"/>
            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_skala"
                android:layout_marginTop="5dp"
                android:background="#858585"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="KECIL"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="SEDANG"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="BESAR"
                android:textColor="#000000"
                android:textSize="16sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/tv_pengungsian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="Titik Pengungsian"/>
            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_pengungsian"
                android:layout_marginTop="5dp"
                android:background="#858585"/>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>
